# jsonize

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  jsonize  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: release.yml  test.yml
tests/: test_jsonize.py
