[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonize"
version = "0.1.0"
description = "Build JSON objects and arrays from shell arguments"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

[tool.setuptools]
script-files = ["jsonize"]
